--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,37 @@
 body{
+    font-family: "Open-Sans";
 }
+
 #card{
+    margin: 0 auto;
+    max-width: 600px;
+    border: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 h1{
+    color-adjust: #121212;
 }
+
 #card img{
+    width: 100%;
 }
+
 ul{
+    list-style-type: none;
 }
+
 li{
+    width: 100%;
 }
+
 label{
+    width: 30%;
+    display: inline-block;
 }
+
 button{
+    width: 100%;
+    padding: 5px;
+    background-color: black;
+    color: white;
 }
